[UPDATE] CSVUserRepositoryTest
add test data(txt file)